--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "javascript-module",
   "version": "1.0.0",
   "description": "Pertama buat ini",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Adha Syah Majid",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
